<resources>
    <string name="app_name">SmartWatch</string>
    <string name="action_settings">Bluetooth</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="birth_date">DD/MM/YYYY</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_help">Help</string>
    <string name="create_your_account">Create your account</string>
    <string name="pfp_selection">Select your profile picture!</string>
    <string name="error">Something is wrong</string>
    <string name="error_empty">This field can\'t be empty</string>
    <string name="too_long">Field is too long</string>
    <string name="too_short">Field is too short</string>
    <string name="proper_email">Please enter a proper email</string>
    <string name="username_java">username</string>
    <string name="password_java">password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="err_yes">Are you sure you want to leave the app?</string>
    <string name="logout">Are you sure you want to Log out?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="not_equal">This field isn\'t equal to the above one</string>
    <string name="placeholder_for_user_image">Placeholder for user image</string>
    <string name="placeholder_for_pic">Placeholder for pic</string>
    <string name="hello_home">Hello,</string>
    <string name="home">Home</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="pedometer">Pedometer</string>
    <string name="enter_goal">Enter goal</string>
    <string name="set_goal">Set Goal</string>
    <string name="view_graph">View graph</string>
    <string name="steps">steps</string>
    <string name="sensor_not_found">Sensor not found</string>
    <string name="hello_xyz">Hello, XYZ</string>
    <string name="bluetooth">bluetooth</string>
    <string name="turn_on">Turn ON</string>
    <string name="turn_off">Turn OFF</string>
    <string name="space">Field cannot take spaces</string>
    <string name="username_taken">Username already exists</string>
    <string name="step_goal">/200</string>
    <string name="techboys_logo">TechBoys logo</string>
    <string name="running_icon">Running icon</string>
    <string name="no_user">User Not Found!</string>
    <string name="password_change">Password Changed!</string>
    <string name="incorrect_password">Password incorrect!</string>
    <string name="incorrect_answer">Incorrect Answer!</string>
    <string name="authentication">Authenticating…</string>
    <string name="bluetooth_ON">Bluetooth is ON</string>
    <string name="bluetooth_OFF">Bluetooth is OFF</string>
    <string name="account_creation">Creating Account…</string>
    <string name="picture_selection">Select Picture</string>
    <string name="bON">On</string>
    <string name="welcome">"Welcome, "</string>
    <string name="changing_password">Changing Password</string>
    <string name="bOFF">Off</string>
    <string name="unEmpty">"Email is empty!"</string>
    <string name="passEmpty">"Password is empty!"</string>
    <string name="passEmpty2">"Re-entered password is empty!"</string>
    <string name="answEmpty">"Answer is empty!"</string>
    <string name="fieldEmpty">"Enter your Email and Password! "</string>
    <string name="fieldEmpty2">"Enter your Email and Answer! "</string>
    <string name="fieldEmpty3">"Password Fields are empty! "</string>
    <string name="monado">Monado</string>
    <string name="no_connection">No connection to the Database</string>
    <string name="user_login_information">Login Information</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="user_personal_information">Personal Information</string>
    <string name="battery_percentage">100%</string>
    <string name="bluetooth_state">On</string>
    <string name="time_since_last_charged">3h 5m</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="answer_the_security_question">Answer the security question</string>
    <string name="submit_request">submit request</string>
    <string name="change_password">change password</string>
    <string name="re_enter_your_new_password">Re-enter your new password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="zero">0</string>
    <string name="_0_bpm">0 bpm</string>
    <string name="last_heart_rate">Last Heart Rate</string>
    <string name="_0_steps">0 steps</string>
    <string name="steps_taken">Steps Taken</string>
    <string name="avghb">Average Heart Beat for</string>
    <string name="bpm">bpm</string>
    <string name="security_information">Security Information</string>
    <string name="what_is_the_name_of_your_first_pet">What is the name of your first pet?</string>
    <string name="_ph_bpm">/ 70 bpm</string>
    <string name="alert">ALERT!</string>


</resources>
